--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -5,11 +5,11 @@ html {
   line-height: $line-height-root;
 
   @media (min-width: $breakpoint-large) {
-    font-size: percentage($ratio-text-root-content);
+    font-size: percentage($ratio-text-root-large);
   }
 
   @media (min-width: $breakpoint-huge) {
-    font-size: percentage($ratio-text-root-full);
+    font-size: percentage($ratio-text-root-huge);
   }
 
   @media (min-width: $breakpoint-fhd-up-width) and (min-height: $breakpoint-fhd-up-height) {
@@ -24,11 +24,11 @@ body {
   margin: 0 0 $margin-top-header;
 
   @media (min-width: $breakpoint-large) {
-    margin-bottom: $margin-top-header-content;
+    margin-bottom: $margin-top-header-large;
   }
 
   @media (min-width: $breakpoint-huge) {
-    margin-bottom: $margin-top-header-full;
+    margin-bottom: $margin-top-header-huge;
   }
 }
 
