--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -3,7 +3,7 @@ body > footer {
   margin-left: auto;
   margin-right: auto;
   margin-top: $margin-top-content-heading;
-  max-width: $width-content;
+  max-width: $width-large;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
   position: relative;
