--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -6,18 +6,18 @@ body > header {
   margin-left: auto;
   margin-right: auto;
   margin-top: $margin-top-header;
-  max-width: $width-content;
+  max-width: $width-large;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
 
   @media (min-width: $breakpoint-large) {
-    font-size: ($ratio-text-header-content * 1rem);
-    height: ($ratio-text-header-content * $line-height-root * 1rem);
-    margin-top: $margin-top-header-content;
+    font-size: ($ratio-text-header-large * 1rem);
+    height: ($ratio-text-header-large * $line-height-root * 1rem);
+    margin-top: $margin-top-header-large;
   }
 
   @media (min-width: $breakpoint-huge) {
-    margin-top: $margin-top-header-full;
+    margin-top: $margin-top-header-huge;
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
