--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -26,15 +26,15 @@
   top: 0;
   z-index: 1;
 
-  @media (min-width: $width-content-outer) {
-    background-image: linear-gradient(to right, $g 0, $g $width-gap-small, $c $width-gap-small, $c ($width-gap-small + $width-content), $g ($width-gap-small + $width-content), $g $width-content-outer);
+  @media (min-width: $width-large-outer) {
+    background-image: linear-gradient(to right, $g 0, $g $width-gap-small, $c $width-gap-small, $c ($width-gap-small + $width-large), $g ($width-gap-small + $width-large), $g $width-large-outer);
     background-position: center;
-    background-size: $width-content-outer 1px;
+    background-size: $width-large-outer 1px;
   }
 
   @media (min-width: $breakpoint-huge) {
-    background-image: linear-gradient(to right, $g 0, $g $width-gap-small, $c $width-gap-small, $c ($width-gap-small + $width-supplement), $g ($width-gap-small + $width-supplement), $g ($width-gap-small + $width-supplement + $width-gap), $c ($width-gap-small + $width-supplement + $width-gap), $c ($width-gap-small + $width-full), $g ($width-gap-small + $width-full), $g $width-full-outer);
-    background-size: $width-full-outer 1px;
+    background-image: linear-gradient(to right, $g 0, $g $width-gap-small, $c $width-gap-small, $c ($width-gap-small + $width-supplement), $g ($width-gap-small + $width-supplement), $g ($width-gap-small + $width-supplement + $width-gap), $c ($width-gap-small + $width-supplement + $width-gap), $c ($width-gap-small + $width-huge), $g ($width-gap-small + $width-huge), $g $width-huge-outer);
+    background-size: $width-huge-outer 1px;
   }
 }
 
