--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -13,8 +13,8 @@ $line-height-small: ($line-height * 0.8);
 
 // Core
 $ratio-text-root: $ratio-text;
-$ratio-text-root-content: (($ratio-text-large - $ratio-text) / 4 + $ratio-text);
-$ratio-text-root-full: (($ratio-text-large - $ratio-text) / 2 + $ratio-text);
+$ratio-text-root-large: (($ratio-text-large - $ratio-text) / 4 + $ratio-text);
+$ratio-text-root-huge: (($ratio-text-large - $ratio-text) / 2 + $ratio-text);
 $line-height-root: $line-height;
 
 $line-height-h1: $line-height-small;
@@ -23,7 +23,7 @@ $ratio-text-pre: $ratio-text-small;
 
 // Global
 $ratio-text-header: $ratio-text-small;
-$ratio-text-header-content: $ratio-text;
+$ratio-text-header-large: $ratio-text;
 
 $ratio-text-content-heading: $ratio-text-huge;
 
