--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -17,20 +17,20 @@ $padding: ($margin-small / $ratio);
 $padding-large: ($padding * $ratio);
 
 // Main Component
-$width-content: (32 * 1rem);
-$width-gap: ($width-content / $ratio / $ratio / $ratio / $ratio / $ratio / $ratio);
+$width-large: (32 * 1rem);
+$width-gap: ($width-large / $ratio / $ratio / $ratio / $ratio / $ratio / $ratio);
 $width-gap-small: ($width-gap / $ratio);
-$width-content-outer: ($width-gap-small + $width-content + $width-gap-small);
-$width-supplement: ($width-content-outer / $ratio - $width-gap-small - $width-gap-small);
+$width-large-outer: ($width-gap-small + $width-large + $width-gap-small);
+$width-supplement: ($width-large-outer / $ratio - $width-gap-small - $width-gap-small);
 $width-supplement-outer: ($width-gap-small + $width-supplement + $width-gap-small);
-$width-full: ($width-supplement + $width-gap + $width-content);
-$width-full-outer: ($width-gap-small + $width-full + $width-gap-small);
-$width-blank: ($width-content / $ratio / $ratio / $ratio);
+$width-huge: ($width-supplement + $width-gap + $width-large);
+$width-huge-outer: ($width-gap-small + $width-huge + $width-gap-small);
+$width-blank: ($width-large / $ratio / $ratio / $ratio);
 
 // Breakpoint
 $width-scrollbar: 2rem;
-$breakpoint-large: (($width-blank + $width-content-outer + $width-blank) * $ratio-text-root-content / $ratio-text-root + $width-scrollbar);
-$breakpoint-huge: (($width-blank + $width-full-outer + $width-blank) * $ratio-text-root-full / $ratio-text-root + $width-scrollbar);
+$breakpoint-large: (($width-blank + $width-large-outer + $width-blank) * $ratio-text-root-large / $ratio-text-root + $width-scrollbar);
+$breakpoint-huge: (($width-blank + $width-huge-outer + $width-blank) * $ratio-text-root-huge / $ratio-text-root + $width-scrollbar);
 $breakpoint-fhd-up-width: 1921px;
 $breakpoint-fhd-up-height: 1081px;
 
@@ -42,14 +42,14 @@ $width-border-table: $width-border-small;
 
 // Global
 $margin-top-header: $margin;
-$margin-top-header-content: $margin-large;
-$margin-top-header-full: $margin-huge;
+$margin-top-header-large: $margin-large;
+$margin-top-header-huge: $margin-huge;
 
 $margin-top-content-heading: $margin-gargantuan;
 
 $width-border-subcontent-search-query: $width-border-small;
 $height-subcontent-search-query: (1rem + ($width-border-subcontent-search-query + $padding-large) * 2);
-$width-subcontent-search-query-content: ($width-content / $ratio / $ratio);
+$width-subcontent-search-query-large: ($width-large / $ratio / $ratio);
 
 // Widget
 $margin-top-move: (($line-height-root - 1) / 2 * 1rem);
