--- a/src/css/widget/_displace.scss
+++ b/src/css/widget/_displace.scss
@@ -3,7 +3,7 @@
   @media (min-width: $breakpoint-huge) {
     clear: both;
     margin-left: (- ($width-supplement + $width-gap));
-    width: $width-content;
+    width: $width-large;
   }
 }
 
