--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -2,16 +2,16 @@ body > main {
   margin-left: auto;
   margin-right: auto;
   margin-top: (0 - $margin-top-content-heading + $margin-top-header * $ratio);
-  max-width: $width-content;
+  max-width: $width-large;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
 
   @media (min-width: $breakpoint-large) {
-    margin-top: (0 - $margin-top-content-heading + $margin-top-header-content * $ratio);
+    margin-top: (0 - $margin-top-content-heading + $margin-top-header-large * $ratio);
   }
 
   @media (min-width: $breakpoint-huge) {
-    margin-top: (0 - $margin-top-content-heading + $margin-top-header-full * $ratio);
+    margin-top: (0 - $margin-top-content-heading + $margin-top-header-huge * $ratio);
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
