--- a/src/css/_subcontent.scss
+++ b/src/css/_subcontent.scss
@@ -1,7 +1,7 @@
 body > aside {
   margin-left: auto;
   margin-right: auto;
-  max-width: $width-content;
+  max-width: $width-large;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
   position: relative;
