--- a/src/html/partial/header.mustache
+++ b/src/html/partial/header.mustache
@@ -3,7 +3,7 @@
 
   <nav>
     <ul>
-      <li>{{#weblog}}<mark>{{/weblog}}<a href="/blog/">ウェブログ</a>{{#weblog}}</mark>{{/weblog}}</li>
+      <li>{{#weblog}}{{^weblog_child}}<mark>{{/weblog_child}}{{/weblog}}<a href="/blog/">過去ログ</a>{{#weblog}}</mark>{{/weblog}}</li>
       <li>{{#about}}<mark>{{/about}}<a href="/about/">いろいろ</a>{{#about}}</mark>{{/about}}</li>
     </ul>
   </nav>
