Remove useless About page

--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -3,26 +3,6 @@ body > header nav {
   height: 100%;
 }
 
-body > header nav ul {
-  display: flex;
+body > header nav p {
   margin-bottom: 0;
-  padding-left: 0;
-}
-
-body > header nav li {
-  display: block;
-  margin-left: $width-gap-small;
-
-  @media (min-width: $breakpoint-large) {
-    margin-left: $width-gap;
-  }
-}
-
-body > header nav li:first-child {
-  margin-left: 0;
-}
-
-body > header nav mark {
-  background-color: transparent;
-  border-bottom: $width-border solid $color-accent-light;
 }
