Revert About page

--- a/src/html/partial/header.mustache
+++ b/src/html/partial/header.mustache
@@ -2,6 +2,6 @@
   <h1><a href="/"><svg width="608" height="512" aria-labelledby="logo-title" role="img" viewBox="0 0 608 512"><title id="logo-title">{{site_title}}</title><path d="M32 0v512h96V288h192v224h96V0h-96v208H128V0zm480 416v96h96v-96z"/></svg></a></h1>
 
   <nav>
-    <p><a href="/blog/">過去ログ</a></p>
+    <p><a href="/blog/">過去ログ</a> • <a href="/about/">いろいろ</a></p>
   </nav>
 </header>
