Add nav link to Documents

--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -6,3 +6,8 @@ body > header nav {
 body > header nav p {
   margin-bottom: 0;
 }
+
+body > header nav mark {
+  background-color: transparent;
+  border-bottom: $width-border solid $color-accent-light;
+}
