Separate with nbsp

--- a/src/html/partial/footer.mustache
+++ b/src/html/partial/footer.mustache
@@ -1,5 +1,6 @@
 <footer>
-  <p><a href="{{license_url}}" rel="license">CC BY</a> • <a href="{{feed_url}}" rel="alternate">RSS</a></p>
+  <p><a href="{{license_url}}" rel="license">CC BY</a>
+    &#xa0;&#xa0;&#xa0;<a href="{{feed_url}}" rel="alternate">RSS</a></p>
 
   <address><a href="https://kyonagashima.com/" rel="author">ながしまきょう</a>が作っています</address>
 </footer>
