--- a/src/html/partial/header.mustache
+++ b/src/html/partial/header.mustache
@@ -3,7 +3,7 @@
 
   <nav>
     <p>{{#weblog}}<mark>{{/weblog}}<a href="/blog/">過去ログ</a>{{#weblog}}</mark>{{/weblog}}
-      • {{#documents}}<mark>{{/documents}}<a href="/documents/">特集</a>{{#documents}}</mark>{{/documents}}
-      • {{#about}}<mark>{{/about}}<a href="/about/">いろいろ</a>{{#about}}</mark>{{/about}}</p>
+      &#xa0;&#xa0;&#xa0;{{#documents}}<mark>{{/documents}}<a href="/documents/">特集</a>{{#documents}}</mark>{{/documents}}
+      &#xa0;&#xa0;&#xa0;{{#about}}<mark>{{/about}}<a href="/about/">いろいろ</a>{{#about}}</mark>{{/about}}</p>
   </nav>
 </header>
