Fix heading sizes

--- a/src/css/content/_subheading.scss
+++ b/src/css/content/_subheading.scss
@@ -1,7 +1,6 @@
 section * h1,
 article * h1 {
-  font-size: inherit;
-  font-weight: bolder;
+  font-size: ($ratio-text-content-subheading * 1rem);
   margin-bottom: $margin-small;
   margin-top: $margin-large;
 }
