--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -27,6 +27,8 @@ $ratio-text-header-large: $ratio-text;
 
 $ratio-text-content-heading: $ratio-text-huge;
 
+$ratio-text-content-subheading: $ratio-text-large;
+
 $ratio-text-content-footer: $ratio-text;
 
 $ratio-text-footer: $ratio-text-small;
