--- a/src/css/content/_heading.scss
+++ b/src/css/content/_heading.scss
@@ -1,5 +1,5 @@
-section > h1,
-article > h1 {
+main > section > h1,
+main > article > h1 {
   font-size: ($ratio-text-content-heading * 1rem);
   margin-top: $margin-top-content-heading;
 }
