Add Site Search link by icon to Header

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -2,7 +2,8 @@ body > header {
   display: flex;
   flex-flow: row wrap;
   font-size: ($ratio-text-header * 1rem);
-  height: ($ratio-text-header * $line-height-root * 1rem);
+  height: ($ratio-text-header * $line-height-header * 1rem);
+  line-height: $line-height-header;
   margin-left: auto;
   margin-right: auto;
   margin-top: $margin-top-header;
@@ -11,8 +12,6 @@ body > header {
   padding-right: $width-gap-small;
 
   @media (min-width: $breakpoint-large) {
-    font-size: ($ratio-text-header-large * 1rem);
-    height: ($ratio-text-header-large * $line-height-root * 1rem);
     margin-top: $margin-top-header-large;
   }
 
@@ -24,6 +23,15 @@ body > header {
 
 body > header a {
   text-decoration: none;
+}
+
+body > header svg {
+  vertical-align: middle;
+  width: auto;
+}
+
+body > header path {
+  fill: $color-fg;
 }
 
 @import "header/logo";
