--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -4,10 +4,17 @@ body > header nav {
 }
 
 body > header nav p {
+  font-size: inherit;
+  height: 100%;
+  line-height: inherit;
   margin-bottom: 0;
 }
 
 body > header nav mark {
   background-color: transparent;
   border-bottom: $width-border solid $color-accent-light;
+}
+
+body > header nav svg {
+  height: (1 / $ratio-text-header / $line-height-header * 100%);
 }
