--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -9,6 +9,7 @@ $ratio-text-small: ($ratio-text-large / $ratio);
 
 // Line Height
 $line-height: $ratio;
+$line-height-large: ($line-height * 1.25);
 $line-height-small: ($line-height * 0.8);
 
 // Core
@@ -23,7 +24,7 @@ $ratio-text-pre: $ratio-text-small;
 
 // Global
 $ratio-text-header: $ratio-text-small;
-$ratio-text-header-large: $ratio-text;
+$line-height-header: $line-height-large;
 
 $ratio-text-content-heading: $ratio-text-huge;
 
