Use unordered list for navigations

--- a/src/css/footer/_footlinks.scss
+++ b/src/css/footer/_footlinks.scss
@@ -1,8 +1,19 @@
-body > footer p {
-  color: $color-fg-light;
+body > footer ul {
+  display: flex;
   margin-bottom: $margin-small;
+  padding-left: 0;
 
   @media (min-width: $breakpoint-large) {
     margin-bottom: 0;
+  }
+}
+
+body > footer ul li {
+  display: block;
+  margin-right: $padding-large;
+
+  @media (min-width: $breakpoint-large) {
+    margin-left: $padding-large;
+    margin-right: 0;
   }
 }
