--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -3,11 +3,19 @@ body > header nav {
   height: 100%;
 }
 
-body > header nav p {
+body > header nav ul {
+  display: flex;
   font-size: inherit;
   height: 100%;
   line-height: inherit;
   margin-bottom: 0;
+  padding-left: 0;
+}
+
+body > header nav ul li {
+  display: block;
+  height: 100%;
+  margin-left: $padding-large;
 }
 
 body > header nav mark {
