--- a/src/html/partial/footer.mustache
+++ b/src/html/partial/footer.mustache
@@ -1,6 +1,8 @@
 <footer>
-  <p><a href="{{license_url}}" rel="license">CC BY</a>
-    &#xa0;&#xa0;&#xa0;<a href="{{feed_url}}" rel="alternate">RSS</a></p>
+  <ul>
+    <li><a href="{{license_url}}" rel="license">CC BY</a></li>
+    <li><a href="{{feed_url}}" rel="alternate">RSS</a></li>
+  </ul>
 
   <address><a href="https://kyonagashima.com/" rel="author">ながしまきょう</a>が作っています</address>
 </footer>
