Move role to section

--- a/src/css/subcontent/_search.scss
+++ b/src/css/subcontent/_search.scss
@@ -1,8 +1,8 @@
-[role="search"] {
+[role="search"] form {
   position: relative;
 }
 
-[role="search"] input {
+[role="search"] form input {
   -webkit-appearance: none;
   border-radius: 0;
   font-family: inherit;
@@ -11,7 +11,7 @@
   line-height: $height-subcontent-search-query;
 }
 
-[role="search"] [name="q"] {
+[role="search"] form [name="q"] {
   background-color: white;
   border: $width-border-subcontent-search-query solid $color-bg-dark;
   box-sizing: border-box;
@@ -20,11 +20,11 @@
   width: 100%;
 }
 
-[role="search"] [name="q"]:focus {
+[role="search"] form [name="q"]:focus {
   border-color: $color-accent-light;
 }
 
-[role="search"] button {
+[role="search"] form button {
   background-color: transparent;
   border: 0;
   box-sizing: border-box;
@@ -36,16 +36,16 @@
   width: $height-subcontent-search-query;
 }
 
-[role="search"] button svg {
+[role="search"] form button svg {
   height: 65%;
   vertical-align: middle;
   width: auto;
 }
 
-[role="search"] button path {
+[role="search"] form button path {
   fill: $color-fg-light;
 }
 
-[role="search"] [name="q"]:focus + button path {
+[role="search"] form [name="q"]:focus + button path {
   fill: $color-accent-light;
 }
