Use px for breakpoint in media queries

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -29,8 +29,8 @@ $width-blank: ($width-large / $ratio / $ratio / $ratio);
 
 // Breakpoint
 $width-scrollbar: 2rem;
-$breakpoint-large: (($width-blank + $width-large-outer + $width-blank) * $ratio-text-root-large / $ratio-text-root + $width-scrollbar);
-$breakpoint-huge: (($width-blank + $width-huge-outer + $width-blank) * $ratio-text-root-huge / $ratio-text-root + $width-scrollbar);
+$breakpoint-large: ceil((($width-blank + $width-large-outer + $width-blank) * $ratio-text-root-large / $ratio-text-root + $width-scrollbar) / 1rem * 16px);
+$breakpoint-huge: ceil((($width-blank + $width-huge-outer + $width-blank) * $ratio-text-root-huge / $ratio-text-root + $width-scrollbar) / 1rem * 16px);
 $breakpoint-fhd-up-width: 1921px;
 $breakpoint-fhd-up-height: 1081px;
 
