--- a/src/html/partial/footer.mustache
+++ b/src/html/partial/footer.mustache
@@ -1,7 +1,7 @@
 <footer>
   <ul>
     <li><a href="{{license_url}}" rel="license">CC BY</a></li>
-    <li><a href="{{feed_url}}" rel="alternate">RSS</a></li>
+    <li><a href="{{feed_url}}" rel="alternate" type="application/rss+xml">RSS</a></li>
   </ul>
 
   <address><a href="https://kyonagashima.com/" rel="author">ながしまきょう</a>が作っています</address>
