--- a/src/html/partial/footer.mustache
+++ b/src/html/partial/footer.mustache
@@ -1,6 +1,6 @@
 <footer>
   <ul>
-    <li><a href="{{license_url}}" rel="license">CC BY</a></li>
+    <li><a href="{{license_url}}" rel="license">CC/BY</a></li>
     <li><a href="{{feed_url}}" rel="alternate" type="application/rss+xml">RSS</a></li>
   </ul>
 
