Use breakpoint as it is

--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -62,11 +62,11 @@ body::after {
   right: 0.5rem;
 
   @media (min-width: $breakpoint-large) {
-    content: "Medium: #{$breakpoint-large / 1rem * 16px}";
+    content: "Medium: #{$breakpoint-large}";
   }
 
   @media (min-width: $breakpoint-huge) {
-    content: "Large: #{$breakpoint-huge / 1rem * 16px}";
+    content: "Large: #{$breakpoint-huge}";
   }
 
   @media print {
