Place Site Search bottom on huge screen

--- a/src/css/content/_subheading.scss
+++ b/src/css/content/_subheading.scss
@@ -2,5 +2,5 @@ section * h1,
 article * h1 {
   font-size: ($ratio-text-content-subheading * 1rem);
   margin-bottom: $margin-small;
-  margin-top: $margin-large;
+  margin-top: $margin-huge;
 }
