--- a/src/css/footer/_links.scss
+++ b/src/css/footer/_links.scss
@@ -7,4 +7,9 @@ body > footer ul {
 body > footer ul li {
   display: block;
   margin-left: $padding-large;
+
+  @media (min-width: $breakpoint-huge) {
+    margin-left: 0;
+    margin-right: $padding-large;
+  }
 }
