--- a/src/css/footer/_byline.scss
+++ b/src/css/footer/_byline.scss
@@ -2,10 +2,11 @@ body > footer address {
   flex-grow: 1;
   font-style: normal;
   order: -1;
-  position: relative;
 
   @media (min-width: $breakpoint-huge) {
+    flex-grow: 0;
     margin-left: (- ($width-supplement + $width-gap));
     margin-right: $width-gap;
+    width: $width-supplement;
   }
 }
