--- a/src/css/subcontent/_search.scss
+++ b/src/css/subcontent/_search.scss
@@ -1,5 +1,14 @@
 [role="search"] form {
   position: relative;
+  top: ($margin-top-content-heading - $margin-large);
+
+  @media (min-width: $breakpoint-huge) {
+    margin-left: auto;
+    margin-right: 0;
+    top: ($margin-top-content-heading + $height-subcontent-search-query - ($height-subcontent-search-query - $ratio-text-footer * $line-height * 1rem) / 2);
+    width: 50%;
+    z-index: 1;
+  }
 }
 
 [role="search"] form input {
