Use native colors for links

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -76,7 +76,7 @@ pre {
 }
 
 blockquote {
-  border-left: $width-border-blockquote solid $color-border-blockquote;
+  border-left: $width-border-blockquote solid;
   clear: both;
   margin: 0;
   padding-left: $padding-left-blockquote;
@@ -122,8 +122,7 @@ figure {
 }
 
 figcaption {
-  border-left: $width-border solid $color-bg-dark;
-  color: $color-fg-light;
+  border-left: $width-border solid;
   display: inline-block;
   font-size: ($ratio-text-small * 1rem);
   margin-top: $margin-small;
@@ -142,7 +141,7 @@ figcaption {
 }
 
 blockquote + figcaption {
-  border-left: $width-border-blockquote solid $color-border-blockquote;
+  border-left: $width-border-blockquote solid;
   font-size: inherit;
   margin-top: 0;
   padding-left: $padding-left-blockquote;
@@ -161,7 +160,6 @@ main {
 
 // Text-level Semantics
 a {
-  color: $color-accent;
   -webkit-text-decoration-skip: ink;
   text-decoration-skip: ink;
 }
@@ -229,7 +227,7 @@ svg:not(:root) {
 
 // Tabular Data
 table {
-  border-bottom: $width-border-table solid $color-border-table;
+  border-bottom: $width-border-table solid;
   border-collapse: collapse;
   border-spacing: 0;
   clear: both;
@@ -248,22 +246,20 @@ figure > table {
   margin-bottom: 0;
 }
 
-%table-cell,
+th,
 td {
-  border-top: $width-border-table solid $color-border-table;
+  border-top: $width-border-table solid;
   padding: $padding-large;
   vertical-align: top;
   white-space: nowrap;
 }
 
 th {
-  @extend %table-cell;
-
   text-align: inherit;
 }
 
 thead th {
-  border-bottom: $width-border solid $color-border-table;
+  border-bottom: $width-border solid;
 }
 
 // Forms
