--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -20,7 +20,7 @@ body > header nav ul li {
 
 body > header nav mark {
   background-color: transparent;
-  border-bottom: $width-border solid $color-accent-light;
+  border-bottom: $width-border solid;
 }
 
 body > header nav svg {
