--- a/src/css/subcontent/_search.scss
+++ b/src/css/subcontent/_search.scss
@@ -22,15 +22,11 @@
 
 [role="search"] form [name="q"] {
   background-color: white;
-  border: $width-border-subcontent-search-query solid $color-bg-dark;
+  border: $width-border-subcontent-search-query solid;
   box-sizing: border-box;
   color: $color-fg;
   padding: 0 $height-subcontent-search-query 0 $padding;
   width: 100%;
-}
-
-[role="search"] form [name="q"]:focus {
-  border-color: $color-accent-light;
 }
 
 [role="search"] form button {
@@ -52,9 +48,5 @@
 }
 
 [role="search"] form button path {
-  fill: $color-fg-light;
-}
-
-[role="search"] form [name="q"]:focus + button path {
-  fill: $color-accent-light;
+  fill: $color-fg;
 }
