Fill SVG with foreground color

--- a/src/css/subcontent/_search.scss
+++ b/src/css/subcontent/_search.scss
@@ -24,7 +24,7 @@
   background-color: white;
   border: $width-border-subcontent-search-query solid;
   box-sizing: border-box;
-  color: $color-fg;
+  color: inherit;
   padding: 0 $height-subcontent-search-query 0 $padding;
   width: 100%;
 }
@@ -33,6 +33,7 @@
   background-color: transparent;
   border: 0;
   box-sizing: border-box;
+  color: inherit;
   height: $height-subcontent-search-query;
   padding: 0;
   position: absolute;
@@ -45,8 +46,4 @@
   height: 65%;
   vertical-align: middle;
   width: auto;
-}
-
-[role="search"] form button path {
-  fill: $color-fg;
 }
