--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -21,16 +21,13 @@ body > header {
 }
 
 body > header a {
+  color: inherit;
   text-decoration: none;
 }
 
 body > header svg {
   vertical-align: text-bottom;
   width: auto;
-}
-
-body > header path {
-  fill: $color-fg;
 }
 
 @import "header/logo";
