--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -220,7 +220,7 @@ figure video {
 }
 
 svg:not(:root) {
-  fill: currentColor;
+  fill: currentcolor;
   max-height: 100%;
   max-width: 100%;
   overflow: hidden;
