Update color scheme to black and white monochrome

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -160,8 +160,16 @@ main {
 
 // Text-level Semantics
 a {
+  color: inherit;
+  -webkit-text-decoration-color: $color-fg-light;
+  -moz-text-decoration-color: $color-fg-light;
+  text-decoration-color: $color-fg-light;
   -webkit-text-decoration-skip: ink;
   text-decoration-skip: ink;
+
+  &:visited {
+    color: $color-fg-light;
+  }
 }
 
 em {
@@ -193,6 +201,10 @@ kbd {
 
 var {
   font-style: normal;
+}
+
+mark {
+  background-color: $color-bg-dark;
 }
 
 // Edits
