--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -21,8 +21,11 @@ body > header {
 }
 
 body > header a {
-  color: inherit;
   text-decoration: none;
+
+  &:visited {
+    color: inherit;
+  }
 }
 
 body > header svg {
