--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -127,6 +127,14 @@ body::after {
   background-color: $color-bg;
 }
 
+.debug-colors li:nth-child(3)::before {
+  background-color: $color-fg-light;
+}
+
+.debug-colors li:nth-child(4)::before {
+  background-color: $color-bg-dark;
+}
+
 // Line Length
 .debug-line-length {
   font-family: Verdana, sans-serif;
