--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -1,5 +1,10 @@
 // Foreground
-$color-fg: hsl(0, 0%, 10%);
+$color-fg: hsl(0, 0%, 11%);
 
 // Background
 $color-bg: hsl(0, 0%, 99%);
+
+// Variation
+$color-fg-light: hsl(0, 0%, 77%);
+
+$color-bg-dark: hsl(0, 0%, 88%);
