Don’t control opacities

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -48,11 +48,11 @@ hr {
   border: 0;
   box-sizing: content-box;
   clear: both;
+  color: $color-fg-light;
   font-size: ($ratio-text-small * 1rem);
   height: 1em;
   line-height: 1;
   margin: $margin-large 0;
-  opacity: 0.5;
   text-align: center;
 }
 
