Add color variation to core elements

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -61,11 +61,13 @@ hr::before {
 }
 
 pre {
+  background-color: $color-bg-dark;
   clear: both;
   font-family: $font-stack-monospace;
   font-size: ($ratio-text-pre * 1rem);
   line-height: $line-height-small;
   margin: 0 0 $margin;
+  padding: $padding-large;
   overflow: auto;
 
   @media (min-width: $breakpoint-large) {
@@ -76,7 +78,7 @@ pre {
 }
 
 blockquote {
-  border-left: $width-border-blockquote solid;
+  border-left: $width-border-blockquote solid $color-border-blockquote;
   clear: both;
   margin: 0;
   padding-left: $padding-left-blockquote;
@@ -122,7 +124,7 @@ figure {
 }
 
 figcaption {
-  border-left: $width-border solid;
+  border-left: $width-border solid $color-fg-light;
   display: inline-block;
   font-size: ($ratio-text-small * 1rem);
   margin-top: $margin-small;
@@ -141,7 +143,7 @@ figcaption {
 }
 
 blockquote + figcaption {
-  border-left: $width-border-blockquote solid;
+  border-left: $width-border-blockquote solid $color-border-blockquote;
   font-size: inherit;
   margin-top: 0;
   padding-left: $padding-left-blockquote;
@@ -240,7 +242,7 @@ svg:not(:root) {
 
 // Tabular Data
 table {
-  border-bottom: $width-border-table solid;
+  border-bottom: $width-border-table solid $color-border-table;
   border-collapse: collapse;
   border-spacing: 0;
   clear: both;
@@ -261,7 +263,7 @@ figure > table {
 
 th,
 td {
-  border-top: $width-border-table solid;
+  border-top: $width-border-table solid $color-border-table;
   padding: $padding-large;
   vertical-align: top;
   white-space: nowrap;
@@ -272,7 +274,7 @@ th {
 }
 
 thead th {
-  border-bottom: $width-border solid;
+  border-bottom: $width-border solid $color-border-table;
 }
 
 // Forms
