--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -8,3 +8,8 @@ $color-bg: hsl(0, 0%, 99%);
 $color-fg-light: hsl(0, 0%, 77%);
 
 $color-bg-dark: hsl(0, 0%, 88%);
+
+// Core
+$color-border-blockquote: $color-fg-light;
+
+$color-border-table: $color-fg-light;
