Remove border from Site Search
This commit also fix size and position of Site Search on huge screen.

--- a/src/css/subcontent/_search.scss
+++ b/src/css/subcontent/_search.scss
@@ -1,4 +1,5 @@
 [role="search"] form {
+  line-height: 1;
   position: relative;
   top: ($margin-top-content-heading - $margin-large);
 
@@ -15,14 +16,14 @@
   -webkit-appearance: none;
   border-radius: 0;
   font-family: inherit;
-  font-size: inherit;
+  font-size: $ratio-text-small;
   height: $height-subcontent-search-query;
   line-height: $height-subcontent-search-query;
 }
 
 [role="search"] form [name="q"] {
-  background-color: white;
-  border: $width-border-subcontent-search-query solid;
+  background-color: $color-bg-dark;
+  border: 0;
   box-sizing: border-box;
   color: inherit;
   padding: 0 $height-subcontent-search-query 0 $padding;
