--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -47,8 +47,7 @@ $margin-top-header-huge: $margin-huge;
 
 $margin-top-content-heading: $margin-gargantuan;
 
-$width-border-subcontent-search-query: $width-border-small;
-$height-subcontent-search-query: (1rem + ($width-border-subcontent-search-query + $padding-large) * 2);
+$height-subcontent-search-query: (1rem + $padding * 2);
 $width-subcontent-search-query-large: ($width-large / $ratio / $ratio);
 
 // Widget
