Remove unused or unnecessary variables

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -64,7 +64,7 @@ pre {
   background-color: $color-bg-dark;
   clear: both;
   font-family: $font-stack-monospace;
-  font-size: ($ratio-text-pre * 1rem);
+  font-size: ($ratio-text-small * 1rem);
   line-height: $line-height-small;
   margin: 0 0 $margin;
   padding: $padding-large;
