Add $color-fg-semilight variation

--- a/src/css/widget/_hang.scss
+++ b/src/css/widget/_hang.scss
@@ -28,6 +28,7 @@ section > h1.hang:first-child + * {
 
 aside.hang {
   clear: both;
+  color: $color-fg-semilight;
   font-size: ($ratio-text-small * 1rem);
   line-height: $line-height-small;
 }
