Remove pre background color

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -61,14 +61,13 @@ hr::before {
 }
 
 pre {
-  background-color: $color-bg-dark;
   clear: both;
+  color: $color-fg-semilight;
   font-family: $font-stack-monospace;
   font-size: ($ratio-text-small * 1rem);
   line-height: $line-height-small;
   margin: 0 0 $margin;
   overflow: auto;
-  padding: $padding-large;
 
   @media (min-width: $breakpoint-large) {
     overflow: visible;
