Only define variables that need to be calculated

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -1,17 +1,17 @@
 body > main {
   margin-left: auto;
   margin-right: auto;
-  margin-top: (0 - $margin-top-content-heading + $margin-top-header * $ratio);
+  margin-top: (0 - $margin-gargantuan + $margin * $ratio);
   max-width: $width-large;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
 
   @media (min-width: $breakpoint-large) {
-    margin-top: (0 - $margin-top-content-heading + $margin-top-header-large * $ratio);
+    margin-top: (0 - $margin-gargantuan + $margin-large * $ratio);
   }
 
   @media (min-width: $breakpoint-huge) {
-    margin-top: (0 - $margin-top-content-heading + $margin-top-header-huge * $ratio);
+    margin-top: (0 - $margin-gargantuan + $margin-huge * $ratio);
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
