--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -1,8 +1,8 @@
 // The document element
 html {
   font-family: $font-stack-system-ui;
-  font-size: percentage($ratio-text-root);
-  line-height: $line-height-root;
+  font-size: percentage($ratio-text);
+  line-height: $line-height;
 
   @media (min-width: $breakpoint-large) {
     font-size: percentage($ratio-text-root-large);
@@ -21,20 +21,20 @@ html {
 body {
   background-color: $color-bg;
   color: $color-fg;
-  margin: 0 0 $margin-top-header;
+  margin: 0 0 $margin;
 
   @media (min-width: $breakpoint-large) {
-    margin-bottom: $margin-top-header-large;
+    margin-bottom: $margin-large;
   }
 
   @media (min-width: $breakpoint-huge) {
-    margin-bottom: $margin-top-header-huge;
+    margin-bottom: $margin-huge;
   }
 }
 
 h1 {
   font-weight: inherit;
-  line-height: $line-height-h1;
+  line-height: $line-height-small;
   margin: 0 0 $margin;
 }
 
@@ -77,7 +77,7 @@ pre {
 }
 
 blockquote {
-  border-left: $width-border-blockquote solid $color-border-blockquote;
+  border-left: $width-border solid $color-fg-light;
   clear: both;
   margin: 0;
   padding-left: $padding-left-blockquote;
@@ -90,7 +90,7 @@ figure blockquote > :last-child {
 ul,
 ol {
   margin: 0 0 $margin;
-  padding-left: $indent;
+  padding-left: $margin;
 }
 
 ul ul,
@@ -114,7 +114,7 @@ dt {
 
 dd {
   margin-bottom: $margin-small;
-  margin-left: $indent;
+  margin-left: $margin;
 }
 
 figure {
@@ -142,7 +142,6 @@ figcaption {
 }
 
 blockquote + figcaption {
-  border-left: $width-border-blockquote solid $color-border-blockquote;
   font-size: inherit;
   margin-top: 0;
   padding-left: $padding-left-blockquote;
@@ -241,7 +240,7 @@ svg:not(:root) {
 
 // Tabular Data
 table {
-  border-bottom: $width-border-table solid $color-border-table;
+  border-bottom: $width-border-small solid $color-fg-light;
   border-collapse: collapse;
   border-spacing: 0;
   clear: both;
@@ -262,7 +261,7 @@ figure > table {
 
 th,
 td {
-  border-top: $width-border-table solid $color-border-table;
+  border-top: $width-border-small solid $color-fg-light;
   padding: $padding-large;
   vertical-align: top;
   white-space: nowrap;
@@ -273,7 +272,7 @@ th {
 }
 
 thead th {
-  border-bottom: $width-border solid $color-border-table;
+  border-bottom: $width-border solid $color-fg-light;
 }
 
 // Forms
