--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -1,21 +1,21 @@
 body > header {
   display: flex;
-  font-size: ($ratio-text-header * 1rem);
-  height: ($ratio-text-header * $line-height-header * 1rem);
-  line-height: $line-height-header;
+  font-size: ($ratio-text-small * 1rem);
+  height: ($ratio-text-small * $line-height-large * 1rem);
+  line-height: $line-height-large;
   margin-left: auto;
   margin-right: auto;
-  margin-top: $margin-top-header;
+  margin-top: $margin;
   max-width: $width-large;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
 
   @media (min-width: $breakpoint-large) {
-    margin-top: $margin-top-header-large;
+    margin-top: $margin-large;
   }
 
   @media (min-width: $breakpoint-huge) {
-    margin-top: $margin-top-header-huge;
+    margin-top: $margin-huge;
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
