--- a/src/css/content/_subheading.scss
+++ b/src/css/content/_subheading.scss
@@ -1,6 +1,6 @@
 section * h1,
 article * h1 {
-  font-size: ($ratio-text-content-subheading * 1rem);
+  font-size: ($ratio-text-large * 1rem);
   margin-bottom: $margin-small;
   margin-top: $margin-huge;
 }
