--- a/src/css/subcontent/_search.scss
+++ b/src/css/subcontent/_search.scss
@@ -1,12 +1,12 @@
 [role="search"] form {
   line-height: 1;
   position: relative;
-  top: ($margin-top-content-heading - $margin-large);
+  top: ($margin-gargantuan - $margin-large);
 
   @media (min-width: $breakpoint-huge) {
     margin-left: auto;
     margin-right: 0;
-    top: ($margin-top-content-heading + $height-subcontent-search-query - ($height-subcontent-search-query - $ratio-text-footer * $line-height * 1rem) / 2);
+    top: ($margin-gargantuan + $height-subcontent-search-query - ($height-subcontent-search-query - $ratio-text-small * $line-height * 1rem) / 2);
     width: 50%;
     z-index: 1;
   }
