--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -5,9 +5,6 @@ $margin-large: ($margin * $ratio);
 $margin-huge: ($margin * $ratio * $ratio);
 $margin-gargantuan: ($margin * $ratio * $ratio * $ratio);
 
-// Indent
-$indent: $margin;
-
 // Border
 $width-border: ($margin-small / $ratio / $ratio / $ratio);
 $width-border-small: ($width-border / $ratio);
@@ -29,22 +26,13 @@ $width-blank: ($width-large / $ratio / $ratio / $ratio);
 
 // Breakpoint
 $width-scrollbar: 2rem;
-$breakpoint-large: ceil((($width-blank + $width-large-outer + $width-blank) * $ratio-text-root-large / $ratio-text-root + $width-scrollbar) / 1rem * 16px);
-$breakpoint-huge: ceil((($width-blank + $width-huge-outer + $width-blank) * $ratio-text-root-huge / $ratio-text-root + $width-scrollbar) / 1rem * 16px);
+$breakpoint-large: ceil((($width-blank + $width-large-outer + $width-blank) * $ratio-text-root-large / $ratio-text + $width-scrollbar) / 1rem * 16px);
+$breakpoint-huge: ceil((($width-blank + $width-huge-outer + $width-blank) * $ratio-text-root-huge / $ratio-text + $width-scrollbar) / 1rem * 16px);
 $breakpoint-fhd-up-width: 1921px;
 $breakpoint-fhd-up-height: 1081px;
 
 // Core
-$width-border-blockquote: $width-border;
-$padding-left-blockquote: ($indent - $width-border-blockquote);
-
-$width-border-table: $width-border-small;
+$padding-left-blockquote: ($margin - $width-border);
 
 // Global
-$margin-top-header: $margin;
-$margin-top-header-large: $margin-large;
-$margin-top-header-huge: $margin-huge;
-
-$margin-top-content-heading: $margin-gargantuan;
-
 $height-subcontent-search-query: (1rem + $padding * 2);
