--- a/src/css/widget/_hang.scss
+++ b/src/css/widget/_hang.scss
@@ -22,7 +22,7 @@ h1.hang {
 
 section > h1.hang:first-child + * {
   @media (min-width: $breakpoint-huge) {
-    margin-top: $margin-top-content-heading;
+    margin-top: $margin-gargantuan;
   }
 }
 
