--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -1,9 +1,9 @@
 body > footer {
   display: flex;
-  font-size: ($ratio-text-footer * 1rem);
+  font-size: ($ratio-text-small * 1rem);
   margin-left: auto;
   margin-right: auto;
-  margin-top: $margin-top-content-heading;
+  margin-top: $margin-gargantuan;
   max-width: $width-large;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
