--- a/src/css/content/_footer.scss
+++ b/src/css/content/_footer.scss
@@ -1,10 +1,9 @@
 article > footer:first-child {
   float: left;
-  font-size: ($ratio-text-content-footer * 1rem);
   width: 100%;
 
   @media (min-width: $breakpoint-huge) {
-    line-height: ($line-height-h1 * $ratio-text-content-heading / $ratio-text-content-footer);
+    line-height: ($line-height-small * $ratio-text-huge / $ratio-text);
     margin-right: $width-gap;
     position: absolute;
     right: 100%;
