--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -24,5 +24,5 @@ body > header nav mark {
 }
 
 body > header nav svg {
-  height: (1 / $ratio-text-header / $line-height-header * 100%);
+  height: (1 / $ratio-text-small / $line-height-large * 100%);
 }
