--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -128,10 +128,14 @@ body::after {
 }
 
 .debug-colors li:nth-child(3)::before {
-  background-color: $color-fg-light;
+  background-color: $color-fg-semilight;
 }
 
 .debug-colors li:nth-child(4)::before {
+  background-color: $color-fg-light;
+}
+
+.debug-colors li:nth-child(5)::before {
   background-color: $color-bg-dark;
 }
 
