Align only search icon right in Header Navigation

--- a/src/css/header/_logo.scss
+++ b/src/css/header/_logo.scss
@@ -8,8 +8,10 @@ body > header h1 {
   text-transform: uppercase;
 
   @media (min-width: $breakpoint-huge) {
+    flex-grow: 0;
     margin-left: (- ($width-supplement + $width-gap));
     margin-right: $width-gap;
+    width: $width-supplement;
   }
 }
 
