--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -1,6 +1,10 @@
 // Navigation
 body > header nav {
   height: 100%;
+
+  @media (min-width: $breakpoint-huge) {
+    flex-grow: 1;
+  }
 }
 
 body > header nav ul {
@@ -15,7 +19,16 @@ body > header nav ul {
 body > header nav ul li {
   display: block;
   height: 100%;
-  margin-left: $padding-large;
+  margin-right: $padding-large;
+}
+
+body > header nav ul li:last-child {
+  margin-right: 0;
+
+  @media (min-width: $breakpoint-huge) {
+    flex-grow: 1;
+    text-align: right;
+  }
 }
 
 body > header nav mark {
