Increase text size per viewport ratio

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -9,11 +9,11 @@ html {
   }
 
   @media (min-width: $breakpoint-huge) {
-    font-size: percentage($ratio-text-root-huge);
+    font-size: percentage($ratio-text-large);
   }
 
   @media (min-width: $breakpoint-fhd-up-width) and (min-height: $breakpoint-fhd-up-height) {
-    font-size: 1vw;
+    font-size: 1.25vw;
   }
 }
 
