--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -27,7 +27,7 @@ $width-blank: ($width-large / $ratio / $ratio / $ratio);
 // Breakpoint
 $width-scrollbar: 2rem;
 $breakpoint-large: ceil((($width-blank + $width-large-outer + $width-blank) * $ratio-text-root-large / $ratio-text + $width-scrollbar) / 1rem * 16px);
-$breakpoint-huge: ceil((($width-blank + $width-huge-outer + $width-blank) * $ratio-text-root-huge / $ratio-text + $width-scrollbar) / 1rem * 16px);
+$breakpoint-huge: ceil((($width-blank + $width-huge-outer + $width-blank) * $ratio-text-large / $ratio-text + $width-scrollbar) / 1rem * 16px);
 $breakpoint-fhd-up-width: 1921px;
 $breakpoint-fhd-up-height: 1081px;
 
