Use px unit for base font size

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -5,11 +5,11 @@ html {
   line-height: $line-height;
 
   @media (min-width: $breakpoint-large) {
-    font-size: percentage($ratio-text-root-large);
+    font-size: ($ratio-text-root-large * 16px);
   }
 
   @media (min-width: $breakpoint-huge) {
-    font-size: percentage($ratio-text-large);
+    font-size: ($ratio-text-large * 16px);
   }
 
   @media (min-width: $breakpoint-fhd-up-width) and (min-height: $breakpoint-fhd-up-height) {
