Use % for font size

--- a/src/css/subcontent/_search.scss
+++ b/src/css/subcontent/_search.scss
@@ -16,7 +16,7 @@
   -webkit-appearance: none;
   border-radius: 0;
   font-family: inherit;
-  font-size: $ratio-text-small;
+  font-size: percentage($ratio-text-small);
   height: $height-subcontent-search-query;
   line-height: $height-subcontent-search-query;
 }
