Control white spaces within Header
This commit also reduce first heading top white spaces.

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -3,18 +3,18 @@ body > header {
   font-size: ($ratio-text-small * 1rem);
   height: ($ratio-text-small * $line-height-large * 1rem);
   line-height: $line-height-large;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: $margin;
+  margin: $margin auto $margin-large;
   max-width: $width-large;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
 
   @media (min-width: $breakpoint-large) {
+    margin-bottom: $margin-huge;
     margin-top: $margin-large;
   }
 
   @media (min-width: $breakpoint-huge) {
+    margin-bottom: $margin-gargantuan;
     margin-top: $margin-huge;
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
