--- a/src/css/content/_heading.scss
+++ b/src/css/content/_heading.scss
@@ -3,3 +3,7 @@ main > article > h1 {
   font-size: ($ratio-text-huge * 1rem);
   margin-top: $margin-gargantuan;
 }
+
+main > *:first-child > h1:first-of-type {
+  margin-top: 0;
+}
