Simplify font stack

--- a/src/css/var/_font.scss
+++ b/src/css/var/_font.scss
@@ -1,7 +1,5 @@
 // System UI
-$font-stack-system-ui-local: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Yu Gothic UI", sans-serif;
-$font-stack-system-ui: $font-stack-system-ui-local;
+$font-stack-system-ui: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Yu Gothic UI", sans-serif;
 
 // Monospace
-$font-stack-monospace-local: "Menlo", "Consolas", monospace;
-$font-stack-monospace: $font-stack-monospace-local;
+$font-stack-monospace: "Menlo", "Consolas", monospace;
