--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -20,7 +20,9 @@
 
         <h1>$title</h1>
 
-        $body
+        <main>
+          $body
+        </main>
       </article>
 
 <!-- blosxom foot -->
